add default col- framework

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 [class*="col-"] {
     /* debug */
-    
+    min-height: 100px;
+    background-color: dodgerblue;
+    border: solid 1px white;
 }
