--- a/css/lib/12boolflex.css
+++ b/css/lib/12boolflex.css
@@ -5,10 +5,10 @@
     box-sizing: border-box;
 }
 
-.container {
+/* .container {
     max-width: 1170px;
     margin: 0 auto;
-}
+} */
 
 .row {
     display: flex;
