--- a/css/lib/12boolflex-resp.css
+++ b/css/lib/12boolflex-resp.css
@@ -69,51 +69,51 @@
     }
 
     /* column offset rules */
-    .column-sm-offset-1 {
+    .col-sm-offset-1 {
         margin-left: calc((100% / 12) * 1);
     }
 
-    .column-sm-offset-2 {
+    .col-sm-offset-2 {
         margin-left: calc((100% / 12) * 2);
     }
 
-    .column-sm-offset-3 {
+    .col-sm-offset-3 {
         margin-left: calc((100% / 12) * 3);
     }
 
-    .column-sm-offset-4 {
+    .col-sm-offset-4 {
         margin-left: calc((100% / 12) * 4);
     }
 
-    .column-sm-offset-5 {
+    .col-sm-offset-5 {
         margin-left: calc((100% / 12) * 5);
     }
 
-    .column-sm-offset-6 {
+    .col-sm-offset-6 {
         margin-left: calc((100% / 12) * 6);
     }
 
-    .column-sm-offset-7 {
+    .col-sm-offset-7 {
         margin-left: calc((100% / 12) * 7);
     }
 
-    .column-sm-offset-8 {
+    .col-sm-offset-8 {
         margin-left: calc((100% / 12) * 8);
     }
 
-    .column-sm-offset-9 {
+    .col-sm-offset-9 {
         margin-left: calc((100% / 12) * 9);
     }
 
-    .column-sm-offset-10 {
+    .col-sm-offset-10 {
         margin-left: calc((100% / 12) * 10);
     }
 
-    .column-sm-offset-11 {
+    .col-sm-offset-11 {
         margin-left: calc((100% / 12) * 11);
     }
 
-    .column-sm-offset-12 {
+    .col-sm-offset-12 {
         margin-left: calc((100% / 12) * 12);
     }
 
@@ -191,51 +191,51 @@
     }
 
     /* column offset rules */
-    .column-md-offset-1 {
+    .col-md-offset-1 {
         margin-left: calc((100% / 12) * 1);
     }
 
-    .column-md-offset-2 {
+    .col-md-offset-2 {
         margin-left: calc((100% / 12) * 2);
     }
 
-    .column-md-offset-3 {
+    .col-md-offset-3 {
         margin-left: calc((100% / 12) * 3);
     }
 
-    .column-md-offset-4 {
+    .col-md-offset-4 {
         margin-left: calc((100% / 12) * 4);
     }
 
-    .column-md-offset-5 {
+    .col-md-offset-5 {
         margin-left: calc((100% / 12) * 5);
     }
 
-    .column-md-offset-6 {
+    .col-md-offset-6 {
         margin-left: calc((100% / 12) * 6);
     }
 
-    .column-md-offset-7 {
+    .col-md-offset-7 {
         margin-left: calc((100% / 12) * 7);
     }
 
-    .column-md-offset-8 {
+    .col-md-offset-8 {
         margin-left: calc((100% / 12) * 8);
     }
 
-    .column-md-offset-9 {
+    .col-md-offset-9 {
         margin-left: calc((100% / 12) * 9);
     }
 
-    .column-md-offset-10 {
+    .col-md-offset-10 {
         margin-left: calc((100% / 12) * 10);
     }
 
-    .column-md-offset-11 {
+    .col-md-offset-11 {
         margin-left: calc((100% / 12) * 11);
     }
 
-    .column-md-offset-12 {
+    .col-md-offset-12 {
         margin-left: calc((100% / 12) * 12);
     }
 
@@ -245,7 +245,7 @@
 /* Desktop version */
 @media all and (min-width: 992px) {
     
-    /* column rules */
+    /* col rules */
     .col-lg {
         flex-grow: 1;
         flex-basis: 0;
@@ -313,51 +313,51 @@
     }
 
     /* column offset rules */
-    .column-lg-offset-1 {
+    .col-lg-offset-1 {
         margin-left: calc((100% / 12) * 1);
     }
 
-    .column-lg-offset-2 {
+    .col-lg-offset-2 {
         margin-left: calc((100% / 12) * 2);
     }
 
-    .column-lg-offset-3 {
+    .col-lg-offset-3 {
         margin-left: calc((100% / 12) * 3);
     }
 
-    .column-lg-offset-4 {
+    .col-lg-offset-4 {
         margin-left: calc((100% / 12) * 4);
     }
 
-    .column-lg-offset-5 {
+    .col-lg-offset-5 {
         margin-left: calc((100% / 12) * 5);
     }
 
-    .column-lg-offset-6 {
+    .col-lg-offset-6 {
         margin-left: calc((100% / 12) * 6);
     }
 
-    .column-lg-offset-7 {
+    .col-lg-offset-7 {
         margin-left: calc((100% / 12) * 7);
     }
 
-    .column-lg-offset-8 {
+    .col-lg-offset-8 {
         margin-left: calc((100% / 12) * 8);
     }
 
-    .column-lg-offset-9 {
+    .col-lg-offset-9 {
         margin-left: calc((100% / 12) * 9);
     }
 
-    .column-lg-offset-10 {
+    .col-lg-offset-10 {
         margin-left: calc((100% / 12) * 10);
     }
 
-    .column-lg-offset-11 {
+    .col-lg-offset-11 {
         margin-left: calc((100% / 12) * 11);
     }
 
-    .column-lg-offset-12 {
+    .col-lg-offset-12 {
         margin-left: calc((100% / 12) * 12);
     }
 
