--- a/css/lib/12boolflex.css
+++ b/css/lib/12boolflex.css
@@ -88,51 +88,51 @@
 }
 
 /* column offset rules */
-.column-xs-offset-1 {
+.col-xs-offset-1 {
     margin-left: calc((100% / 12) * 1);
 }
 
-.column-xs-offset-2 {
+.col-xs-offset-2 {
     margin-left: calc((100% / 12) * 2);
 }
 
-.column-xs-offset-3 {
+.col-xs-offset-3 {
     margin-left: calc((100% / 12) * 3);
 }
 
-.column-xs-offset-4 {
+.col-xs-offset-4 {
     margin-left: calc((100% / 12) * 4);
 }
 
-.column-xs-offset-5 {
+.col-xs-offset-5 {
     margin-left: calc((100% / 12) * 5);
 }
 
-.column-xs-offset-6 {
+.col-xs-offset-6 {
     margin-left: calc((100% / 12) * 6);
 }
 
-.column-xs-offset-7 {
+.col-xs-offset-7 {
     margin-left: calc((100% / 12) * 7);
 }
 
-.column-xs-offset-8 {
+.col-xs-offset-8 {
     margin-left: calc((100% / 12) * 8);
 }
 
-.column-xs-offset-9 {
+.col-xs-offset-9 {
     margin-left: calc((100% / 12) * 9);
 }
 
-.column-xs-offset-10 {
+.col-xs-offset-10 {
     margin-left: calc((100% / 12) * 10);
 }
 
-.column-xs-offset-11 {
+.col-xs-offset-11 {
     margin-left: calc((100% / 12) * 11);
 }
 
-.column-xs-offset-12 {
+.col-xs-offset-12 {
     margin-left: calc((100% / 12) * 12);
 }
 
